--- a/app/src/main/res/layout/fragment_create_wallet_first.xml
+++ b/app/src/main/res/layout/fragment_create_wallet_first.xml
@@ -20,6 +20,7 @@
         android:layout_marginTop="32dp"
         android:drawableEnd="@drawable/ic_flag"
         android:hint="@string/country"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
