--- a/app/src/main/res/layout/qr_scanner_fragment.xml
+++ b/app/src/main/res/layout/qr_scanner_fragment.xml
@@ -44,6 +44,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
+                    android:inputType="text"
                     android:text="@string/welcome_to"
                     android:textColor="@color/medium_gray"
                     android:textSize="30sp"
@@ -78,7 +79,6 @@
                         android:layout_height="0dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="8dp"
-                        android:text="kfslfljakalf"
                         android:textColor="@color/lightBlue"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -92,7 +92,6 @@
                         android:id="@+id/tv_vendor_type"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
-                        android:text="Restaurant"
                         app:layout_constraintBottom_toBottomOf="@+id/iv_vendor_logo"
                         app:layout_constraintStart_toStartOf="@+id/tv_vendor_name"
                         app:layout_constraintTop_toBottomOf="@+id/tv_vendor_name" />
@@ -107,8 +106,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
-                    android:drawableEnd="@drawable/email"
                     android:hint="@string/amount_of_money_to_be_transfared"
+                    android:inputType="numberDecimal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/layout_vendor_data" />
@@ -122,8 +121,9 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
-                    android:drawableEnd="@drawable/email"
+                    android:drawableEnd="@drawable/ic_lock"
                     android:hint="@string/pin_code"
+                    android:inputType="numberPassword"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_money" />
