--- a/app/src/main/res/layout/fragment_create_wallet_first.xml
+++ b/app/src/main/res/layout/fragment_create_wallet_first.xml
@@ -18,6 +18,7 @@
         android:id="@+id/country"
         style="@style/InputTextField"
         android:layout_marginTop="32dp"
+        android:text="US"
         android:drawableEnd="@drawable/ic_flag"
         android:hint="@string/country"
         android:inputType="text"
@@ -29,6 +30,7 @@
         android:id="@+id/bank_name"
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
+        android:text="STRIPE TEST BANK"
         android:hint="@string/bank_name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +42,7 @@
         style="@style/InputTextField"
         android:layout_marginTop="16dp"
         android:hint="@string/account_number"
+        android:text="000123456789"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +54,7 @@
         android:layout_marginTop="16dp"
         android:hint="@string/routing_number"
         android:inputType="number"
+        android:text="110000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/account_number" />
@@ -59,6 +63,7 @@
         android:id="@+id/currency"
         style="@style/InputTextField"
         android:layout_width="match_parent"
+        android:text="usd"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="@string/currency"
