--- a/app/src/main/res/layout/qr_scanner_fragment.xml
+++ b/app/src/main/res/layout/qr_scanner_fragment.xml
@@ -104,6 +104,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:drawableEnd="@drawable/dollar"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="8dp"
                     android:hint="@string/amount_of_money_to_be_transfared"
